# zero2prod

./: .env  3  Cargo.toml  Dockerfile  Makefile  compose.yaml  configuration.yaml  configuration.yml  docker-compose.yml  spec.yaml
.sqlx/: query-a3dccf790e79a88be9b87b62209815b04940c320fd340f15d22891d7c2341e04.json
configurations/: base.yaml  local.yaml  production.yaml
migrations/: 20250730185055_create_subscription_table.sql  20251019192638_alter_table_subscriptions_alter_column_status_to_not_null.sql  20251019193345_create_subscription_tokens_table.sql  20260311140155_alter_subscriptions_table_add_column_subscribed_at.sql
scripts/: init_db.sh  init_project.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs  subscriptions_confirm.rs
src/telemetry/: mod.rs  telemetry.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  main.rs  subscription.rs  subscriptions_confirm.rs
