[package]
name = "zero2prod"
version = "0.1.0"
author = ["Henrique Veronez"]
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
tokio = { version = "1.47.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.15.13"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]}
uuid = { version = "1.17.0", features = ["v7"] }
chrono = { version = "0.4.41", features = ["serde"] }

[dev-dependencies]
reqwest = "0.12"
