[package]
name = "zero2prod"
version = "0.1.0"
author = ["Henrique Veronez"]
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
tokio = { version = "1.47.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.15.13"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]}
chrono = { version = "0.4.41", features = ["serde"] }
env_logger = "0.11.8"
log = "0.4.27"
uuid = { version = "1.17.0", features = ["v7", "v4"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry", "env-filter"]}
tracing-bunyan-formatter = "0.3.10"

[dev-dependencies]
reqwest = "0.12"
