[package]
name = "zero2prod"
version = "0.1.0"
author = ["Henrique Veronez"]
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
tokio = { version = "1.47.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.15.13"
sqlx = { version = "^0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]}
chrono = { version = "0.4.41", features = ["serde"] }
log = "0.4.27"
uuid = { version = "1.17.0", features = ["v7", "v4"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry", "env-filter"]}
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
once_cell = "1.21.3"
secrecy = { version = "0.10.3", features = ["serde"] }
tracing-actix-web = "0.7.19"
serde-aux = "4.7.0"
unicode-segmentation = "1.12.0"
validator = "0.20.0"
reqwest = {version = "0.12", features = ["json", "rustls-tls"]}
linkify = "0.10.0"

[dev-dependencies]
claim = "0.5.0"
fake = "4.4.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
serde_json = "1.0"
wiremock = "0.6.5"
